part1/exer1.11/pingpong/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: exer1-11-pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: exer1-11-pingpong
  ports:
    - protocol: TCP
      port: 2350
      targetPort: 8080
