part1/exer1.11/pingpong/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exer1-11-pingpong-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: exer1-11-pingpong-svc
            port:
              number: 2350
